plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':client') // Re-added this line
    testImplementation project(':client').sourceSets.test.output // Keep this line
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    implementation 'org.apache.olingo:odata-server-core:5.0.0'
    implementation 'org.apache.olingo:odata-server-api:5.0.0'
    implementation 'org.apache.olingo:odata-commons-api:5.0.0'
    implementation 'org.apache.olingo:odata-commons-core:5.0.0'

    implementation 'org.json:json:20240303'

    runtimeOnly 'com.h2database:h2'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    testImplementation 'org.mockito:mockito-core:5.12.0'
    testImplementation 'org.dbunit:dbunit:2.7.3'
}

tasks.named('test') {
    useJUnitPlatform()
    testLogging {
        showStandardStreams = true
    }
}
